// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caret renders cardinal directions 1`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "bottom": "100%",
      "left": "50%",
      "marginLeft": -8,
    }
  }
  width={16}
>
  <g
    transform="translate(8,16) rotate(180)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 2`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "left": "100%",
      "marginTop": -8,
      "top": "50%",
    }
  }
  width={16}
>
  <g
    transform="translate(0,8) rotate(-90)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 3`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "left": "50%",
      "marginLeft": -8,
      "top": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(8,0)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 4`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "marginTop": -8,
      "right": "100%",
      "top": "50%",
    }
  }
  width={16}
>
  <g
    transform="translate(16,8) rotate(90)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 5`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "bottom": "100%",
      "left": 8,
      "marginLeft": null,
    }
  }
  width={16}
>
  <g
    transform="translate(8,16) rotate(180)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 6`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "bottom": "100%",
      "marginLeft": null,
      "right": 8,
    }
  }
  width={16}
>
  <g
    transform="translate(8,16) rotate(180)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 7`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "left": 8,
      "marginLeft": null,
      "top": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(8,0)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 8`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "marginLeft": null,
      "right": 8,
      "top": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(8,0)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 9`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "marginTop": null,
      "right": "100%",
      "top": 8,
    }
  }
  width={16}
>
  <g
    transform="translate(16,8) rotate(90)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 10`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "bottom": 8,
      "marginTop": null,
      "right": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(16,8) rotate(90)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 11`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "left": "100%",
      "marginTop": null,
      "top": 8,
    }
  }
  width={16}
>
  <g
    transform="translate(0,8) rotate(-90)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 12`] = `
<svg
  className="Caret"
  height={16}
  role="presentation"
  style={
    {
      "bottom": 8,
      "left": "100%",
      "marginTop": null,
    }
  }
  width={16}
>
  <g
    transform="translate(0,8) rotate(-90)"
  >
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
    />
    <path
      className="Background"
      d="M-8,0L0,8L8,0L-8,0Z"
      style={
        {
          "fill": undefined,
        }
      }
    />
    <path
      className="Border"
      d="M-8,0L0,8L8,0"
      fill="none"
      style={
        {
          "stroke": undefined,
          "strokeWidth": undefined,
        }
      }
    />
  </g>
</svg>
`;
